force-app/main/default/objects/Dummy04__c/Dummy04__c.object-meta.xml
<CustomObject>
    <label>Dummy04</label>
    <nameField>
        <label>Dummy04 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy04</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>