force-app/main/default/objects/Dummy04__c/fields/FooBar067__c.field-meta.xml
<CustomField>
    <fullName>FooBar067__c</fullName>
    <label>FooBar067</label>
    <length>255</length>
    <type>Text</type>
</CustomField>