force-app/main/default/objects/Dummy04__c/fields/FooBar111__c.field-meta.xml
<CustomField>
    <fullName>FooBar111__c</fullName>
    <label>FooBar111</label>
    <length>255</length>
    <type>Text</type>
</CustomField>