force-app/main/default/objects/Dummy04__c/fields/FooBar128__c.field-meta.xml
<CustomField>
    <fullName>FooBar128__c</fullName>
    <label>FooBar128</label>
    <length>255</length>
    <type>Text</type>
</CustomField>